--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "homepage": "https://github.com/comp426-2022-spring/a04-cgoldman123#readme",
   "dependencies": {
+    "better-sqlite3": "^7.5.1",
     "cars": "^1.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "md5": "^2.3.0",
     "minimist": "^1.2.6",
-    "morgan": "^1.10.0",
-    "sqlite3": "^5.0.2"
+    "morgan": "^1.10.0"
   }
 }
